<resources>
    <string name="app_name">AppDoctor</string>
    <string name="main_title">应用列表</string>
    <string name="title_activity_app_detail">AppDetailActivity</string>
    <string name="action_launch_app">点击启动App</string>
    <string name="action_launch_activity">点击启动指定界面</string>
    <string name="action_uninstall_app">点击卸载App</string>
    <string name="launch">启动</string>
    <string name="uninstall">卸载</string>
    <string name="apk_explorer">安装包</string>
    <string name="apk_settings">配置</string>
    <string name="action_settings">Settings</string>
    <string name="title_system">系统</string>
    <string name="title_store">存储</string>
    <string name="search">搜索</string>
    <string name="screen">屏幕</string>
    <string name="title_properties">属性</string>
    <string name="title_system_properties">属性</string>
    <string name="title_main">简介</string>
    <string name="title_permission">权限</string>
    <string name="title_permission_detail">权限详情</string>
    <string name="title_component">组件</string>
    <string name="title_component_detail">组件详情</string>
    <string name="title_lib">类库</string>
    <string name="title_lib_detail">类库详情</string>
    <string name="title_dashboard">统计</string>
    <string name="title_activity_app_analyze">AppAnalyzeActivity</string>

    <string name="menu_all_app">所有应用</string>
    <string name="menu_custom_app">三方应用</string>
    <string name="menu_chart">应用统计</string>

    <string name="item_activity">Activity</string>
    <string name="item_service">Service</string>
    <string name="item_provider">Provider</string>
    <string name="item_receiver">Receiver</string>
    <string name="item_meta_data">MetaData</string>
    <string name="item_package_size">安装包大小</string>
    <string name="item_install_time">安装时间</string>
    <string name="item_signature">签名详情</string>
    <string name="title_activity_app_dashboard">AppDashboardActivity</string>

    <item name="key_switch" type="id" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_switch_all">所有应用</string>
    <string name="nav_header_switch_install">已安装应用</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_app_list">应用列表</string>
    <string name="menu_system_info">本机参数</string>
    <string name="menu_dashboard">数据统计</string>
    <string name="menu_battery">电池统计</string>
    <string name="menu_photo_info">图片信息</string>
    <string name="menu_sort_size">按大小排序</string>
    <string name="menu_sort_time">按时间排序</string>
    <string name="menu_sort_name">按名字排序</string>
    <string name="menu_export_apk">导出安装包</string>
    <string name="menu_share_apk">分享安装包</string>
    <string name="menu_explorer_apk">查看安装包</string>
    <string name="menu_launch_app">启动程序</string>
    <string name="menu_uninstall_app">卸载程序</string>
    <string name="menu_setting_app">配置程序</string>
    <string name="menu_hardware">设备硬件</string>
    <string name="menu_overview">预览</string>
    <string name="menu_tool">辅助工具</string>

    <string name="lib_empty_data">没有发现类库存在</string>

    <string name="system_app">系统应用</string>
    <string name="property_name_hint">属性名称</string>

    <string name="system_about">关于本机</string>
    <string name="system_state">状态信息</string>
    <string name="system_parameter">运行参数</string>

    <string name="shortcut_view_image_info">查看图片Exif信息</string>
    <string name="shortcut_view_image_info_short">查看图片</string>
    <string name="empty_data">空数据</string>
    <string name="total">共%d条</string>

    <!-- Preference Titles -->
    <string name="general_header">通用</string>
    <string name="skin_header">展示</string>
    <string name="include_system_app">显示系统应用</string>
    <string name="skin_dark_mode">深色模式</string>
    <string name="app_list_mode">程序列表样式</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="nav_menu_app">应用</string>
    <string name="nav_system">系统</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
