<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_app_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_app_list" />
        <item
            android:id="@+id/nav_photo_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_photo_info" />
        <item
            android:id="@+id/nav_battery"
            android:icon="@drawable/ic_baseline_battery_charging_full_24"
            android:title="@string/menu_battery" />
        <item
            android:id="@+id/nav_hardware"
            android:icon="@drawable/ic_baseline_edgesensor_high_24"
            android:title="@string/menu_hardware" />
        <item
            android:id="@+id/nav_system_info"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_system_info" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_dashboard" />

    </group>
</menu>