<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_dashboard"
        android:icon="@drawable/ic_outline_insert_chart_outlined_24"
        android:title="@string/menu_chart"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_sort_name"
        android:icon="@drawable/ic_baseline_menu_open_24"
        android:title="@string/menu_sort_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sort_size"
        android:title="@string/menu_sort_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sort_time"
        android:title="@string/menu_sort_time"
        app:showAsAction="never" />
</menu>