<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.domker.app.doctor.detail.home.HomeFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_detail_main">
        <action
            android:id="@+id/action_navigation_main_to_navigation_component"
            app:destination="@id/navigation_component" />
        <action
            android:id="@+id/action_navigation_main_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_main_to_permissionFragment"
            app:destination="@id/navigation_permission" />
    </fragment>

    <fragment
        android:id="@+id/navigation_component"
        android:name="com.domker.app.doctor.detail.component.ComponentFragment"
        android:label="@string/title_component"
        tools:layout="@layout/fragment_detail_component">
        <action
            android:id="@+id/action_navigation_component_to_navigation_component_detail"
            app:destination="@id/navigation_component_detail" />
        <action
            android:id="@+id/action_navigation_component_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_component_detail"
        android:label="@string/title_component_detail"
        android:name="com.domker.app.doctor.detail.component.ComponentDetailFragment"
        tools:layout="@layout/fragment_detail_component_info" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.domker.app.doctor.detail.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_main_dashboard" />

    <fragment
        android:id="@+id/navigation_permission"
        android:name="com.domker.app.doctor.detail.permission.PermissionFragment"
        android:label="@string/title_permission"
        tools:layout="@layout/fragment_detail_permission" >
        <action
            android:id="@+id/action_navigation_permission_to_permissionDetailFragment"
            app:destination="@id/navigation_permission_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_permission_detail"
        android:name="com.domker.app.doctor.detail.permission.PermissionDetailFragment"
        android:label="@string/title_permission_detail"
        tools:layout="@layout/fragment_detail_permission_info" />

</navigation>
