<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_system">

    <fragment
        android:id="@+id/navigation_system"
        android:name="com.domker.app.doctor.main.device.SystemFragment"
        android:label="@string/title_system"
        tools:layout="@layout/fragment_device_system" />
    <fragment
        android:id="@+id/navigation_store"
        android:name="com.domker.app.doctor.main.device.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_device_store" />
    <fragment
        android:id="@+id/navigation_properties"
        android:name="com.domker.app.doctor.main.device.PropertiesFragment"
        android:label="@string/title_system_properties"
        tools:layout="@layout/fragment_device_properties" />

</navigation>