<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_app_list">

    <fragment
        android:id="@+id/nav_app_list"
        android:name="com.domker.app.doctor.main.list.AppListFragment"
        android:label="@string/menu_app_list"
        tools:layout="@layout/fragment_app_list" />
    <fragment
        android:id="@+id/nav_system_info_2"
        android:name="com.domker.app.doctor.main.device.DeviceInfoFragment"
        android:label="@string/menu_system_info"
        tools:layout="@layout/fragment_main_device" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.domker.app.doctor.main.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/nav_system_info"
        android:name="com.domker.app.doctor.main.device.DeviceActivity"
        android:label="@string/menu_system_info"
        tools:layout="@layout/activity_device" />

</navigation>